--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 
-    <a class="navbar-brand" href="http://localhost:4000/">Haoyi Fan</a>
+    <a class="navbar-brand" href="http://localhost:4000/">Yi Lin</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
@@ -56,7 +56,7 @@
 	  <div class="row">
 		<div class="col-sm-5">
 
-		  <p>&copy 2020 Haoyi Fan. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
+		  <p>&copy 2020 Yi Lin. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
 		   <p>  </p><p>
 
 
