--- a/allnews.html
+++ b/allnews.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
-  <meta name="description" content="Haoyi Fan">
+  <meta name="description" content="Yi Lin">
   <link rel="stylesheet" href="https://im-possibleyi.github.io/css/main.css">
   <link rel="canonical" href="https://im-possibleyi.github.io/allnews.html">
 <link rel="shortcut icon" type ="image/x-icon" href="https://im-possibleyi.github.io/images/favicon.ico">
@@ -28,7 +28,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 
-    <a class="navbar-brand" href="https://im-possibleyi.github.io/">Haoyi Fan</a>
+    <a class="navbar-brand" href="https://im-possibleyi.github.io/">Yi Lin</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
@@ -83,7 +83,7 @@
 	  <div class="row">
 		<div class="col-sm-5">
 
-		  <p>&copy 2020 Haoyi Fan. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
+		  <p>&copy 2020 Yi Lin. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
 		   <p>  </p><p>
 
 
