--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
       <p><!-- <br clear="all" /> --></p>
 
       <p><a href="mailto:&#105;&#115;&#102;&#97;&#110;&#104;&#121;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">
-  isfanhy@gmail.com
+  louielin2018@gmail.com
   </a> <br />
   UNC-chapel hill <br />
   <!-- No.52, Xuefu Road<br> -->
