--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 <em>Visiting scholar, Department of Computer Science, UNC-chapel hill</em></p>
 
       <p>Dec, 2018 :
-<em>Internship, Baidu Inc. Baidu image recognition, Mobile Group</em></p>
+<em>Internship, <a href="https://home.baidu.com"> Baidu Inc. </a> Baidu image recognition, Mobile Group</em></p>
 
       <p>Sep, 2017 :
 <em>Selected as a joint training student in <a href="http://www.gaoyue.org/cn/index"> iMoon Lab </a> at Tsinghua University.</em></p>
