--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
   <div class="col-sm-11 clearfix">
     <div class="well">
-      <pubtit>Detecting Changes of Functional Connectivity by Dy- namic Graph Embedding Learning</pubtit>
+      <pubtit>Detecting Changes of Functional Connectivity by Dynamic Graph Embedding Learning</pubtit>
 
       <p><img src="https://im-possibleyi.github.io/images/pubpic/Dynamicgraphembedding.jpg" class="img-responsive" width="120px" style="float: left" /></p>
 
