--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="col-sm-8">
 
-      <p>I am a Rearch Assisstant in Computer Science at <a href="http://www.hrbust.edu.cn/">University of North Carolina at Chapel Hill</a> in Chapel Hill, USA. Moreover, I am also co-supervised by Prof. <a href="http://www.gaoyue.org/cn/people/gaoyue_index.html">Yue Gao</a> for scientific research.</p>
+      <p>I am atest Rearch Assisstant in Computer Science at <a href="http://www.hrbust.edu.cn/">University of North Carolina at Chapel Hill</a> in Chapel Hill, USA. Moreover, I am also co-supervised by Prof. <a href="http://www.gaoyue.org/cn/people/gaoyue_index.html">Yue Gao</a> for scientific research.</p>
 
       <h4>Research Interests </h4>
 
