--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="col-sm-8">
 
-      <p>I am atest Rearch Assisstant in Computer Science at <a href="http://www.hrbust.edu.cn/">University of North Carolina at Chapel Hill</a> in Chapel Hill, USA. Moreover, I am also co-supervised by Prof. <a href="http://www.gaoyue.org/cn/people/gaoyue_index.html">Yue Gao</a> for scientific research.</p>
+      <p>I am current a graduate student majored in Computer Science at <a href="https://wustl.edu/">Washington University in St. Louis </a> and I used to worked as a  Rearch Assisstant in Computer Science at <a href="http://www.hrbust.edu.cn/">University of North Carolina at Chapel Hill</a> in Chapel Hill, USA. Moreover, I am also co-supervised by Prof. <a href="http://www.gaoyue.org/cn/people/gaoyue_index.html">Yue Gao</a> for scientific research.</p>
 
       <h4>Research Interests </h4>
 
@@ -74,6 +74,21 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 -->
 
       <h3 id="news">News</h3>
+      <p>Jan, 2022 :
+<em>Incoming SDE intern at Meta Inc.!</em></p>
+
+      <p>Nov, 2021 :
+<em>Paper on “Detecting Brain State Changes via Manifold Mean Shifting” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> 2021 IEEE International Conference on Bioinformatics and Biomedicine (BIBM) - CCF Class B </em></p>
+
+      <p>Jun, 2021 :
+<em>Jointed Alipay Group - Alibaba Inc as a Machine Learning Engineering.</em></p>
+    
+      <p>May, 2021 :
+<em>Paper on “Detecting brain state changes by geometric deep learning of functional dynamics on Riemannian manifold” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2021)</em></p>
+
+      <p>Jan, 2021 :
+<em>Paper on  “Learning dynamic graph embeddings for accurate detection of cognitive state changes in functional brain networks” is accepted for publication in <a href="https://www.sciencedirect.com/science/article/pii/S1053811921000689"> NeuroImage (SCI Zone 1) </a>. </em></p>
+
 
       <p>Oct, 2020 :
 <em>Made an oral presentation in MICCAI 2020 (Early accepted:15%)!</em></p>
