--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 **_If you are interested in research collaboration, please drop me an email with your CV._**
 -->
 
-      <h3 id="news">News</h3>
+      <h3 id="news">Selected News</h3>
       <p>Jan, 2022 :
 <em>Incoming SDE intern at Meta Inc.!</em></p>
 
       <p>Nov, 2021 :
-<em>Paper on “Detecting Brain State Changes via Manifold Mean Shifting” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> 2021 IEEE International Conference on Bioinformatics and Biomedicine (BIBM) - CCF Class B </em></p>
+<em>Paper on “Detecting Brain State Changes via Manifold Mean Shifting” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> 2021 IEEE International Conference on Bioinformatics and Biomedicine (BIBM) - CCF Class B </a></em></p>
 
       <p>Jun, 2021 :
 <em>Jointed Alipay Group - Alibaba Inc as a Machine Learning Engineering.</em></p>
     
       <p>May, 2021 :
-<em>Paper on “Detecting brain state changes by geometric deep learning of functional dynamics on Riemannian manifold” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2021)</em></p>
+<em>Paper on “Detecting brain state changes by geometric deep learning of functional dynamics on Riemannian manifold” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2021)</a></em></p>
 
       <p>Jan, 2021 :
 <em>Paper on  “Learning dynamic graph embeddings for accurate detection of cognitive state changes in functional brain networks” is accepted for publication in <a href="https://www.sciencedirect.com/science/article/pii/S1053811921000689"> NeuroImage (SCI Zone 1) </a>. </em></p>
 
 
-      <p>Oct, 2020 :
-<em>Made an oral presentation in MICCAI 2020 (Early accepted:15%)!</em></p>
+      <!-- <p>Oct, 2020 :
+<em>Made an oral presentation in MICCAI 2020 (Early accepted:15%)!</em></p> -->
 
       <p>Aug, 2020 :
 <em>Paper on “Detecting Changes of Functional Connectivity by Dynamic Graph Embedding Learning” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2020) </a>.</em></p>
@@ -102,11 +102,11 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
       <p>Oct, 2019 :
 <em>Jointed the ACM lab in UNC-chapel hill as a full-time research assiatent.</em></p>
 
-      <p>Aug, 2019 :
+      <!-- <p>Aug, 2019 :
 <em>Patent on “A multi-Ultrasound based detection network for Congenital Heart Disease Dignosis” is accepted for publication in <a href="https://www.baidu.com"> Patent CN 110164550 </a>.</em></p>
 
       <p>Jun, 2019 :
-<em>Visiting scholar, Department of Computer Science, UNC-chapel hill</em></p>
+<em>Visiting scholar, Department of Computer Science, UNC-chapel hill</em></p> -->
 
       <p>Dec, 2018 :
 <em>Internship, <a href="https://home.baidu.com"> Baidu Inc. </a> Baidu image recognition, Mobile Group</em></p>
@@ -141,6 +141,68 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 <div class="col-sm-12">
 
   <h3 id="publications">Publications</h3>
+  
+  <div class="col-sm-11 clearfix">
+    <div class="well">
+      <pubtit>Detecting Brain State Changes via Manifold Mean Shifting</pubtit>
+
+      <p><img src="https://im-possibleyi.github.io/images/pubpic/BIBM.png" class="img-responsive" width="120px" style="float: left" /></p>
+
+      <p></p>
+
+      <p><em>Y. Lin*, Z. Huang*, T. Dan*, and G. Wu</em></p>
+
+      <p>IEEE International Conference on Bioinformatics and Biomedicine (BIBM), 2021</p>
+
+      <p><a href="https://ieeexplore.ieee.org/abstract/document/9669488">paper</a>
+/
+
+    </div>
+  </div>
+
+  <div class="col-sm-11 clearfix">
+    <div class="well">
+      <pubtit>Detecting Brain State Changes by Geometric Deep Learning of Functional Dynamics on Riemannian Manifold</pubtit>
+
+      <p><img src="https://im-possibleyi.github.io/images/pubpic/MICCAI2021.png" class="img-responsive" width="120px" style="float: left" /></p>
+
+      <p></p>
+
+      <p><em>Z. Huang*, T. Dan, Y. Lin and G. Wu</em></p>
+
+      <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2021</p>
+
+      <p><a href="https://ieeexplore.ieee.org/abstract/document/9669488">paper</a>
+/
+
+    </div>
+  </div>
+
+
+
+
+
+    <div class="col-sm-11 clearfix">
+      <div class="well">
+        <pubtit>Learning dynamic graph embeddings for accurate detection of cognitive state changes in functional brain networks</pubtit>
+
+        <p><img src="https://im-possibleyi.github.io/images/pubpic/NeuroImage.png" class="img-responsive" width="120px" style="float: left" /></p>
+
+        <p></p>
+
+        <p><em>Y. Lin, D. Yang, J. Hou, P. Laurienti and G. Wu</em></p>
+
+        <p>NeuroImage, 2021</p>
+
+        <p><a href="https://www.sciencedirect.com/science/article/pii/S1053811921000689">paper</a>
+  /
+  <!-- <a href="https://www.baidu.com">pdf</a></p> -->
+
+      </div>
+    </div>
+
+
+
 
   <div class="col-sm-11 clearfix">
     <div class="well">
@@ -150,7 +212,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
       <p></p>
 
-      <p><em>Y. Lin J. Hou. P. Laurienti, and G. Wu</em></p>
+      <p><em>Y. Lin, J. Hou, P. Laurienti and G. Wu</em></p>
 
       <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2020</p>
 
@@ -160,6 +222,11 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
     </div>
   </div>
+
+
+
+
+
 
   <div class="col-sm-11 clearfix">
     <div class="well">
