--- a/publications/index.html
+++ b/publications/index.html
@@ -47,41 +47,109 @@
         <div id="gridid" class="col-sm-12">
   <h3 id="publicationsreports">Publications/Reports</h3>
 
-<div class="col-sm-11 clearfix">
-  <div class="well">
-    <pubtit>Detecting Changes of Functional Connectivity by Dy- namic Graph Embedding Learning</pubtit>
 
-    <p><img src="https://im-possibleyi.github.io/images/pubpic/Dynamicgraphembedding.jpg" class="img-responsive" width="200px" style="float: left" /></p>
+  <div class="col-sm-11 clearfix">
+    <div class="well">
+      <pubtit>Detecting Brain State Changes via Manifold Mean Shifting</pubtit>
 
-    <p></p>
+      <p><img src="https://im-possibleyi.github.io/images/pubpic/BIBM.png" class="img-responsive" width="120px" style="float: left" /></p>
 
-    <p><em>Y. Lin J. Hou. P. Laurienti, and G. Wu</em></p>
+      <p></p>
 
-    <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2020</p>
+      <p><em>Y. Lin*, Z. Huang*, T. Dan*, and G. Wu</em></p>
 
-    <p><a href="https://www.baidu.com">paper</a>
+      <p>IEEE International Conference on Bioinformatics and Biomedicine (BIBM), 2021</p>
+
+      <p><a href="https://ieeexplore.ieee.org/abstract/document/9669488">paper</a>
+/
+
+    </div>
+  </div>
+
+  <div class="col-sm-11 clearfix">
+    <div class="well">
+      <pubtit>Detecting Brain State Changes by Geometric Deep Learning of Functional Dynamics on Riemannian Manifold</pubtit>
+
+      <p><img src="https://im-possibleyi.github.io/images/pubpic/MICCAI2021.png" class="img-responsive" width="120px" style="float: left" /></p>
+
+      <p></p>
+
+      <p><em>Z. Huang*, T. Dan, Y. Lin and G. Wu</em></p>
+
+      <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2021</p>
+
+      <p><a href="https://ieeexplore.ieee.org/abstract/document/9669488">paper</a>
+/
+
+    </div>
+  </div>
+
+
+
+
+
+    <div class="col-sm-11 clearfix">
+      <div class="well">
+        <pubtit>Learning dynamic graph embeddings for accurate detection of cognitive state changes in functional brain networks</pubtit>
+
+        <p><img src="https://im-possibleyi.github.io/images/pubpic/NeuroImage.png" class="img-responsive" width="120px" style="float: left" /></p>
+
+        <p></p>
+
+        <p><em>Y. Lin, D. Yang, J. Hou, P. Laurienti and G. Wu</em></p>
+
+        <p>NeuroImage, 2021</p>
+
+        <p><a href="https://www.sciencedirect.com/science/article/pii/S1053811921000689">paper</a>
+  /
+  <!-- <a href="https://www.baidu.com">pdf</a></p> -->
+
+      </div>
+    </div>
+
+
+
+
+  <div class="col-sm-11 clearfix">
+    <div class="well">
+      <pubtit>Detecting Changes of Functional Connectivity by Dynamic Graph Embedding Learning</pubtit>
+
+      <p><img src="https://im-possibleyi.github.io/images/pubpic/Dynamicgraphembedding.jpg" class="img-responsive" width="120px" style="float: left" /></p>
+
+      <p></p>
+
+      <p><em>Y. Lin, J. Hou, P. Laurienti and G. Wu</em></p>
+
+      <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2020</p>
+
+      <p><a href="https://www.baidu.com">paper</a>
  /
  <a href="https://www.baidu.com">pdf</a></p>
 
+    </div>
   </div>
-</div>
 
-<div class="col-sm-11 clearfix">
-  <div class="well">
-    <pubtit>A General Learning-based Framework to Characterize Intrinsic Connectivity Strength in Brain Network</pubtit>
 
-    <p><img src="https://im-possibleyi.github.io/images/pubpic/G_graphlearning.jpg" class="img-responsive" width="200px" style="float: left" /></p>
 
-    <p></p>
 
-    <p><em>Y. Lin, D. Yang, C. Yan, Y. Gao, M. Kim, G. Wu</em></p>
 
-    <p>Organization for Human Brain Mapping</p>
 
-    <p><a href="https://www.baidu.com">pdf</a></p>
+  <div class="col-sm-11 clearfix">
+    <div class="well">
+      <pubtit>A General Learning-based Framework to Characterize Intrinsic Connectivity Strength in Brain Network</pubtit>
 
+      <p><img src="https://im-possibleyi.github.io/images/pubpic/G_graphlearning.jpg" class="img-responsive" width="120px" style="float: left" /></p>
+
+      <p></p>
+
+      <p><em>Y. Lin, D. Yang, C. Yan, Y. Gao, M. Kim, G. Wu</em></p>
+
+      <p>Organization for Human Brain Mapping</p>
+
+      <p><a href="https://www.baidu.com">pdf</a></p>
+
+    </div>
   </div>
-</div>
 
 <p>   </p>
 
