--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 <li>Brain state decoding.</li>
 <li>Lesion detection.</li>
 </ul>
-      <h5> Graph Theory </h5>
+      <!-- <h5> Graph Theory </h5>
       <ul>
 <li>Graph embedding.</li>
-</ul>
+</ul> -->
 
       <!--
 My work lies at the intersection of Computer Vision and Machine Learning. Specifically, I am working on leveraging machine learning techniques for better inference in computer vision models. The main research question is how to make use of learning techniques such as deep neural networks and random forests for inference in structured prediction frameworks.
