--- a/allnews.html
+++ b/allnews.html
@@ -47,30 +47,44 @@
         <div id="gridid" class="col-sm-12">
   <h1 id="news">News</h1>
 
-<p>Oct, 2020 <br />
-<em>Made an oral presentation in MICCAI 2020 (Early accepted:15%)!</em></p>
-
-<p>Aug, 2020 <br />
-<em>Paper on “Detecting Changes of Functional Connectivity by Dynamic Graph Embedding Learning” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2020) </a>.</em></p>
-
-<p>Feb, 2020 <br />
-<em>Paper on “A General Learning-based Framework to Characterize Intrinsic Connectivity Strength in Brain Network” is accepted for publication in <a href="https://www.baidu.com"> Organization for Human Brain Mapping (OHBM 2020) </a>.</em></p>
-
-<p>Oct, 2019 <br />
-<em>Jointed the ACM lab in UNC-chapel hill as a full-time research assiatent.</em></p>
-
-<p>Aug, 2019 <br />
-<em>Patent on “A multi-Ultrasound based detection network for Congenital Heart Disease Dignosis” is accepted for publication in <a href="https://www.baidu.com"> Patent CN 110164550 </a>.</em></p>
-
-<p>Jun, 2019 <br />
-<em>Visiting scholar, Department of Computer Science, UNC-chapel hill</em></p>
-
-<p>Dec, 2018 <br />
-<em>Internship, Baidu Inc. Baidu image recognition, Mobile Group</em></p>
-
-<p>Sep, 2017 <br />
-<em>Selected as a joint training student in <a href="http://www.gaoyue.org/cn/index"> iMoon Lab </a> at Tsinghua University.</em></p>
-
+  <p>Jan, 2022 :
+	<em>Incoming SDE intern at <a href="https://about.facebook.com/meta/"> Meta Inc. </a>!</em></p>
+	
+		  <p>Nov, 2021 :
+	<em>Paper on “Detecting Brain State Changes via Manifold Mean Shifting” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> 2021 IEEE International Conference on Bioinformatics and Biomedicine (BIBM) - CCF Class B </a></em></p>
+	
+		  <p>Jun, 2021 :
+	<em>Jointed <a href="https://global.alipay.com/platform/site/ihome"> Alipay Group </a> - Alibaba Inc as a Machine Learning Engineering.</em></p>
+		
+		  <p>May, 2021 :
+	<em>Paper on “Detecting brain state changes by geometric deep learning of functional dynamics on Riemannian manifold” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2021)</a></em></p>
+	
+		  <p>Jan, 2021 :
+	<em>Paper on  “Learning dynamic graph embeddings for accurate detection of cognitive state changes in functional brain networks” is accepted for publication in <a href="https://www.sciencedirect.com/science/article/pii/S1053811921000689"> NeuroImage (SCI Zone 1) </a>. </em></p>
+	
+	
+	<p>Oct, 2020 :
+	<em>Made an oral presentation in MICCAI 2020 (Early accepted:15%)!</em></p>
+	
+		  <p>Aug, 2020 :
+	<em>Paper on “Detecting Changes of Functional Connectivity by Dynamic Graph Embedding Learning” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2020) </a>.</em></p>
+	
+		  <p>Feb, 2020 :
+	<em>Paper on “A General Learning-based Framework to Characterize Intrinsic Connectivity Strength in Brain Network” is accepted for publication in <a href="https://www.baidu.com"> Organization for Human Brain Mapping (OHBM 2020) </a>.</em></p>
+	
+		  <p>Oct, 2019 :
+	<em>Jointed the ACM lab in UNC-chapel hill as a full-time research assiatent.</em></p>
+	
+	<p>Aug, 2019 :
+	<em>Patent on “A multi-Ultrasound based detection network for Congenital Heart Disease Dignosis” is accepted for publication in <a href="https://www.baidu.com"> Patent CN 110164550 </a>.</em></p>
+	
+		  <p>Jun, 2019 :
+	<em>Visiting scholar, Department of Computer Science, UNC-chapel hill</em></p>
+		  <p>Dec, 2018 :
+	<em>Internship, <a href="https://home.baidu.com"> Baidu Inc. </a> Baidu image recognition, Mobile Group</em></p>
+	
+		  <p>Sep, 2017 :
+	<em>Selected as a joint training student in <a href="http://www.gaoyue.org/cn/index"> iMoon Lab </a> at Tsinghua University.</em></p>
 
 </div>
 
@@ -83,7 +97,7 @@
 	  <div class="row">
 		<div class="col-sm-5">
 
-		  <p>&copy 2020 Yi Lin. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
+		  <p>&copy 2022 Yi Lin.</p>
 		   <p>  </p><p>
 
 
