--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 	  <div class="row">
 		<div class="col-sm-5">
 
-		  <p>&copy 2022 Yi Lin. </a>.</p>
+		  <p>&copy 2022 Yi Lin. </a></p>
 		   <p>  </p><p>
 
 
