--- a/publications/index.html
+++ b/publications/index.html
@@ -182,7 +182,7 @@
 	  <div class="row">
 		<div class="col-sm-5">
 
-		  <p>&copy 2020 Yi Lin. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
+		  <p>&copy 2020 Yi Lin.</p>
 		   <p>  </p><p>
 
 
