--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
       <p><a href="mailto:&#105;&#115;&#102;&#97;&#110;&#104;&#121;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">
   louielin2018@gmail.com
   </a> <br />
-  UNC-chapel hill <br />
+  Washington University in St. Louis <br />
   <!-- No.52, Xuefu Road<br> -->
-  Chapel hill, USA.<br /></p>
+  Saint Louis, USA.<br /></p>
 
     </div>
 
@@ -150,7 +150,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
       <p></p>
 
-      <p><em>Y. Lin*, Z. Huang*, T. Dan*, and G. Wu</em></p>
+      <p><em><a href="https://im-possibleyi.github.io/"> Y. Lin </a>*, Z. Huang*, T. Dan*, and G. Wu</em></p>
 
       <p>IEEE International Conference on Bioinformatics and Biomedicine (BIBM), 2021</p>
 
@@ -168,7 +168,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
       <p></p>
 
-      <p><em>Z. Huang*, T. Dan, Y. Lin and G. Wu</em></p>
+      <p><em>Z. Huang, T. Dan, <a href="https://im-possibleyi.github.io/"> Y. Lin </a> and G. Wu</em></p>
 
       <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2021</p>
 
@@ -190,7 +190,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
         <p></p>
 
-        <p><em>Y. Lin, D. Yang, J. Hou, P. Laurienti and G. Wu</em></p>
+        <p><em><a href="https://im-possibleyi.github.io/"> Y. Lin </a>, D. Yang, J. Hou, P. Laurienti and G. Wu</em></p>
 
         <p>NeuroImage, 2021</p>
 
@@ -212,7 +212,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
       <p></p>
 
-      <p><em>Y. Lin, J. Hou, P. Laurienti and G. Wu</em></p>
+      <p><em><a href="https://im-possibleyi.github.io/"> Y. Lin </a>, J. Hou, P. Laurienti and G. Wu</em></p>
 
       <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2020</p>
 
@@ -236,7 +236,7 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
       <p></p>
 
-      <p><em>Y. Lin, D. Yang, C. Yan, Y. Gao, M. Kim, G. Wu</em></p>
+      <p><em><a href="https://im-possibleyi.github.io/"> Y. Lin </a>, D. Yang, C. Yan, Y. Gao, M. Kim, G. Wu</em></p>
 
       <p>Organization for Human Brain Mapping</p>
 
