--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 <script src="https://im-possibleyi.github.io/js/bootstrap.min.js"></script>
 
 	
-	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=858f8c&w=300&t=tt&d=xMrwlby0WY6K10A8iRKa90Vl5R7e1d89RsdU9eK2ZeA&co=168adb'></script>
-
+<!-- 	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=858f8c&w=300&t=tt&d=xMrwlby0WY6K10A8iRKa90Vl5R7e1d89RsdU9eK2ZeA&co=168adb'></script> -->
+	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=q68QNsdCUr4Lur9NZDsLTPkfq8eUv9P2Hsi-vvmSilA&cl=ffffff&w=a"></script>
   </body>
 
 </html>
