--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 -->
 
       <h3 id="news">Selected News</h3>
-      <p>Jan, 2022 :
-<em>Incoming SDE intern at <a href="https://about.facebook.com/meta/"> Meta Inc. </a>!</em></p>
+      <p>May, 2022 :
+<em>SDE intern at <a href="https://about.facebook.com/meta/"> Meta Inc. </a>!</em></p>
 
       <p>Nov, 2021 :
 <em>Paper on “Detecting Brain State Changes via Manifold Mean Shifting” is accepted for publication in <a href="http://cjc.ict.ac.cn/"> 2021 IEEE International Conference on Bioinformatics and Biomedicine (BIBM) - CCF Class B </a></em></p>
@@ -216,9 +216,9 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 
       <p>International Conference on Medical Image Computing and Computer Assisted Intervention, 2020</p>
 
-      <p><a href="https://www.baidu.com">paper</a>
+      <p><a href="https://link.springer.com/chapter/10.1007/978-3-030-59728-3_48">paper</a>
  /
- <a href="https://www.baidu.com">pdf</a></p>
+ <a href="https://link.springer.com/chapter/10.1007/978-3-030-59728-3_48">pdf</a></p>
 
     </div>
   </div>
