--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ My work lies at the intersection of Computer Vision and Machine Learning. Specif
 -->
 
       <h3 id="news">Selected News</h3>
+      <p>Jan, 2023 :
+<em>SDE at <a href="https://www.bloomberg.com/"> Bloomberg LP. </a>!</em></p>
+
       <p>May, 2022 :
 <em>SDE intern at <a href="https://about.facebook.com/meta/"> Meta Inc. </a>!</em></p>
 
