--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="col-sm-8">
 
-      <p>I am current a graduate student majored in Computer Science at <a href="https://wustl.edu/">Washington University in St. Louis </a> and I used to worked as a  Rearch Assisstant in Computer Science at <a href="http://www.hrbust.edu.cn/">University of North Carolina at Chapel Hill</a> in Chapel Hill, USA. Moreover, I am also co-supervised by Prof. <a href="http://www.gaoyue.org/cn/people/gaoyue_index.html">Yue Gao</a> for scientific research.</p>
+      <p>I am currently a Software Engineer at Bloomberg with 2 years of industry experience. Previously, I was a graduate student majoring in Computer Science at <a href="https://wustl.edu/">Washington University in St. Louis</a>. I also worked as a Research Assistant in Computer Science at the <a href="http://www.cs.unc.edu/">University of North Carolina at Chapel Hill</a>. Additionally, I was co-supervised by Prof. <a href="http://www.gaoyue.org/cn/people/gaoyue_index.html">Yue Gao</a> for scientific research.</p>
 
       <h4>Research Interests </h4>
 
